--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "sentence-tokenizer",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Tokenize paragraphs into sentences, and smaller tokens.",
   "main": "lib/tokenizer.js",
   "scripts": {
     "test": "make test"
   },
-  "repository": "",
+  "homepage": "http://github.com/parmentf/node-sentence-tokenizer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parmentf/node-sentence-tokenizer.git"
+  },
   "keywords": [
     "tokenizer",
     "sentence"
