--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "debug": "*",
+    "debug": "3.1.0",
     "sugar": "1.3.x"
   },
   "devDependencies": {
-    "mocha": "1.7.x"
+    "eslint": "^4.9.0",
+    "mocha": "4.0.1"
   }
 }
