--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Tokenize paragraphs into sentences, and smaller tokens.",
   "main": "lib/tokenizer.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha",
+    "test-w": "mocha -w"
   },
   "homepage": "http://github.com/parmentf/node-sentence-tokenizer",
   "repository": {
