--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "dependencies": {
-    "debug": "3.1.0",
-    "sugar": "1.3.x"
+    "debug": "3.1.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
